--- a/index.html
+++ b/index.html
@@ -49,80 +49,82 @@
         <img class="pattern-home-2" src="./assets/bg-pattern-home-2.svg" alt="" />
       </div>
     </header>
-    <main class="main-content-container">
-      <section class="teams-info">
-        <div class="teams-group">
-          <h2 class="heading-2"><span>Build & manage distributed teams like no one else.</span></h2>
-          <div class="teams-data">
-            <figure>
-              <img src="./assets/icon-person.svg" alt="icon-person" />
+    <main>
+      <div class="main-content-container">
+        <section class="teams-info">
+          <div class="teams-group">
+            <h2 class="heading-2"><span>Build & manage distributed teams like no one else.</span></h2>
+            <div class="teams-data">
+              <figure>
+                <img src="./assets/icon-person.svg" alt="icon-person" />
+                <figcaption>
+                  <h3>Experienced Individuals</h3>
+                  <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+                </figcaption>
+              </figure>
+              <figure>
+                <img src="./assets/icon-cog.svg" alt="icon-cog" />
+                <figcaption>
+                  <h3>Easy to Implement</h3>
+                  <p>Our processes have been refined over years of implementation meaning our teams always deliver.</p>
+                </figcaption>
+              </figure>
+              <figure>
+                <img src="./assets/icon-chart.svg" alt="icon-chart" />
+                <figcaption>
+                  <h3>Enhanced Productivity</h3>
+                  <p>Our customized platform with in-built analytics helps you manage your distributed teams.</p>
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+        </section>
+        <img class="pattern-home-3" src="./assets/bg-pattern-home-3.svg" alt="" />
+      </div>
+      <section class="quotes-container">
+        <img src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
+        <div class="quotes">
+          <div class="quotes-group">
+            <h2 class="heading-2">Delivering real results for top companies. Some of our <span class="success-stories">success stories.</span></h2>
+            <figure class="figure1">
               <figcaption>
-                <h3>Experienced Individuals</h3>
-                <p>Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+                <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
+                <q class="quote">The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.</q>
+                <h3 class="heading-3">Kady Baker</h3>
+                <p class="job-position">Product Manager at Bookmark</p>
               </figcaption>
+              <img src="./assets/avatar-kady.jpg" width="62" height="62" alt="kady" />
             </figure>
-            <figure>
-              <img src="./assets/icon-cog.svg" alt="icon-cog" />
+            <figure class="figure2">
               <figcaption>
-                <h3>Easy to Implement</h3>
-                <p>Our processes have been refined over years of implementation meaning our teams always deliver.</p>
+                <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
+                <q class="quote">We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!</q>
+                <h3 class="heading-3">Aiysha Reese</h3>
+                <p class="job-position">Founder of Manage</p>
               </figcaption>
+              <img src="./assets/avatar-aiysha.jpg" width="62" height="62" alt="aiysha" />
             </figure>
-            <figure>
-              <img src="./assets/icon-chart.svg" alt="icon-chart" />
+            <figure class="figure3">
               <figcaption>
-                <h3>Enhanced Productivity</h3>
-                <p>Our customized platform with in-built analytics helps you manage your distributed teams.</p>
+                <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
+                <q class="quote">Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.</q>
+                <h3 class="heading-3">Arthur Clarke</h3>
+                <p class="job-position">Co-founder of MyPhysio</p>
               </figcaption>
+              <img src="./assets/avatar-arthur.jpg" width="62" height="62" alt="arthur" />
             </figure>
           </div>
         </div>
+        <img src="./assets/bg-pattern-home-5.svg" class="pattern-home-5" alt="" />
       </section>
-      <img class="pattern-home-3" src="./assets/bg-pattern-home-3.svg" alt="" />
-    </main>
-    <div class="quotes-container">
-      <img src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
-      <div class="quotes">
-        <div class="quotes-group">
-          <h2 class="heading-2">Delivering real results for top companies. Some of our <span class="success-stories">success stories.</span></h2>
-          <figure class="figure1">
-            <figcaption>
-              <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
-              <q class="quote">The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.</q>
-              <h3 class="heading-3">Kady Baker</h3>
-              <p class="job-position">Product Manager at Bookmark</p>
-            </figcaption>
-            <img src="./assets/avatar-kady.jpg" width="62" height="62" alt="kady" />
-          </figure>
-          <figure class="figure2">
-            <figcaption>
-              <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
-              <q class="quote">We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!</q>
-              <h3 class="heading-3">Aiysha Reese</h3>
-              <p class="job-position">Founder of Manage</p>
-            </figcaption>
-            <img src="./assets/avatar-aiysha.jpg" width="62" height="62" alt="aiysha" />
-          </figure>
-          <figure class="figure3">
-            <figcaption>
-              <img class="icon-quote" src="./assets/icon-quotes.svg" alt="" />
-              <q class="quote">Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.</q>
-              <h3 class="heading-3">Arthur Clarke</h3>
-              <p class="job-position">Co-founder of MyPhysio</p>
-            </figcaption>
-            <img src="./assets/avatar-arthur.jpg" width="62" height="62" alt="arthur" />
-          </figure>
+      <section class="contact-us-container">
+        <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
+        <div class="contact-us-content">
+          <h2 class="heading-2">Ready to get started?</h2>
+          <a class="contact-us header-link" href="./contact.html">contact us</a>
         </div>
-      </div>
-      <img src="./assets/bg-pattern-home-5.svg" class="pattern-home-5" alt="" />
-    </div>
-    <div class="contact-us-container">
-      <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
-      <div class="contact-us-content">
-        <h2 class="heading-2">Ready to get started?</h2>
-        <a class="contact-us header-link" href="./contact.html">contact us</a>
-      </div>
-    </div>
+      </section>
+    </main>
     <footer class="footer-container">
       <div class="footer-content">
         <div class="nav-group">
