--- a/about.html
+++ b/about.html
@@ -50,167 +50,169 @@
       </div>
       <img class="pattern-home-2" src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" />
     </header>
-    <main class="main-content-container">
-      <img class="bg-pattern-2" src="./assets/bg-pattern-about-2-contact-1.svg" alt="" />
-      <div class="directors-info">
-        <h2 class="heading-2">Meet the directors</h2>
-        <div class="cards">
-          <div class="card">
-            <div class="card-holder">
-              <div class="card-inner">
-                <figure class="card-front">
-                  <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="Nikita" />
-                  <figcaption>
+    <main>
+      <div class="main-content-container">
+        <img class="bg-pattern-2" src="./assets/bg-pattern-about-2-contact-1.svg" alt="" />
+        <div class="directors-info">
+          <h2 class="heading-2">Meet the directors</h2>
+          <div class="cards">
+            <div class="card">
+              <div class="card-holder">
+                <div class="card-inner">
+                  <figure class="card-front">
+                    <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="Nikita" />
+                    <figcaption>
+                      <h3 class="heading-3">Nikita Marks</h3>
+                      <p class="job-position">Founder & CEO</p>
+                    </figcaption>
+                  </figure>
+                  <div class="back-card">
                     <h3 class="heading-3">Nikita Marks</h3>
-                    <p class="job-position">Founder & CEO</p>
-                  </figcaption>
-                </figure>
-                <div class="back-card">
-                  <h3 class="heading-3">Nikita Marks</h3>
-                  <q class="card-quote">It always amazes me how much talent there is in every corner of the globe.</q>
-                  <div class="socials">
-                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
-                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    <q class="card-quote">It always amazes me how much talent there is in every corner of the globe.</q>
+                    <div class="socials">
+                      <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                      ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    </div>
                   </div>
                 </div>
               </div>
+              <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
             </div>
-            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
-          </div>
-          <div class="card">
-            <div class="card-holder">
-              <div class="card-inner">
-                <figure class="card-front">
-                  <img width="96px" height="96px" src="./assets/avatar-christian.jpg" alt="Christian" />
-                  <figcaption>
+            <div class="card">
+              <div class="card-holder">
+                <div class="card-inner">
+                  <figure class="card-front">
+                    <img width="96px" height="96px" src="./assets/avatar-christian.jpg" alt="Christian" />
+                    <figcaption>
+                      <h3 class="heading-3">Cristian Duncan</h3>
+                      <p class="job-position">Co-founder & COO</p>
+                    </figcaption>
+                  </figure>
+                  <div class="back-card">
                     <h3 class="heading-3">Cristian Duncan</h3>
-                    <p class="job-position">Co-founder & COO</p>
-                  </figcaption>
-                </figure>
-                <div class="back-card">
-                  <h3 class="heading-3">Cristian Duncan</h3>
-                  <q class="card-quote">Distributed teams required unique processes. You need to approach work in a new way.</q>
-                  <div class="socials">
-                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
-                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    <q class="card-quote">Distributed teams required unique processes. You need to approach work in a new way.</q>
+                    <div class="socials">
+                      <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                      ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    </div>
                   </div>
                 </div>
               </div>
+              <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
             </div>
-            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
-          </div>
-          <div class="card">
-            <div class="card-holder">
-              <div class="card-inner">
-                <figure class="card-front">
-                  <img width="96px" height="96px" src="./assets/avatar-cruz.jpg" alt="Cruz" />
-                  <figcaption>
+            <div class="card">
+              <div class="card-holder">
+                <div class="card-inner">
+                  <figure class="card-front">
+                    <img width="96px" height="96px" src="./assets/avatar-cruz.jpg" alt="Cruz" />
+                    <figcaption>
+                      <h3 class="heading-3">Cruz Hamer</h3>
+                      <p class="job-position">Co-founder & COO</p>
+                    </figcaption>
+                  </figure>
+                  <div class="back-card">
                     <h3 class="heading-3">Cruz Hamer</h3>
-                    <p class="job-position">Co-founder & COO</p>
-                  </figcaption>
-                </figure>
-                <div class="back-card">
-                  <h3 class="heading-3">Cruz Hamer</h3>
-                  <q class="card-quote">Technology is at the forefront of enabling distributed teams. That's where we come in.</q>
-                  <div class="socials">
-                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
-                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    <q class="card-quote">Technology is at the forefront of enabling distributed teams. That's where we come in.</q>
+                    <div class="socials">
+                      <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                      ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    </div>
                   </div>
                 </div>
               </div>
+              <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
             </div>
-            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
-          </div>
-          <div class="card">
-            <div class="card-holder">
-              <div class="card-inner">
-                <figure class="card-front">
-                  <img width="96px" height="96px" src="./assets/avatar-drake.jpg" alt="Drake" />
-                  <figcaption>
+            <div class="card">
+              <div class="card-holder">
+                <div class="card-inner">
+                  <figure class="card-front">
+                    <img width="96px" height="96px" src="./assets/avatar-drake.jpg" alt="Drake" />
+                    <figcaption>
+                      <h3 class="heading-3">Drake Heaton</h3>
+                      <p class="job-position">Business Development Lead</p>
+                    </figcaption>
+                  </figure>
+                  <div class="back-card">
                     <h3 class="heading-3">Drake Heaton</h3>
-                    <p class="job-position">Business Development Lead</p>
-                  </figcaption>
-                </figure>
-                <div class="back-card">
-                  <h3 class="heading-3">Drake Heaton</h3>
-                  <q class="card-quote">Hiring similar people from similar backgrounds is a surefire way to stunt innovation.</q>
-                  <div class="socials">
-                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
-                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    <q class="card-quote">Hiring similar people from similar backgrounds is a surefire way to stunt innovation.</q>
+                    <div class="socials">
+                      <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                      ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    </div>
                   </div>
                 </div>
               </div>
+              <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
             </div>
-            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
-          </div>
-          <div class="card">
-            <div class="card-holder">
-              <div class="card-inner">
-                <figure class="card-front">
-                  <img width="96px" height="96px" src="./assets/avatar-griffin.jpg" alt="Griffin" />
-                  <figcaption>
+            <div class="card">
+              <div class="card-holder">
+                <div class="card-inner">
+                  <figure class="card-front">
+                    <img width="96px" height="96px" src="./assets/avatar-griffin.jpg" alt="Griffin" />
+                    <figcaption>
+                      <h3 class="heading-3">Griffin Wise</h3>
+                      <p class="job-position">Lead Marketing</p>
+                    </figcaption>
+                  </figure>
+                  <div class="back-card">
                     <h3 class="heading-3">Griffin Wise</h3>
-                    <p class="job-position">Lead Marketing</p>
-                  </figcaption>
-                </figure>
-                <div class="back-card">
-                  <h3 class="heading-3">Griffin Wise</h3>
-                  <q class="card-quote">Unique perspectives shape unique products, which is what you need to survive these days.</q>
-                  <div class="socials">
-                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
-                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    <q class="card-quote">Unique perspectives shape unique products, which is what you need to survive these days.</q>
+                    <div class="socials">
+                      <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                      ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    </div>
                   </div>
                 </div>
               </div>
+              <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
             </div>
-            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
-          </div>
-          <div class="card">
-            <div class="card-holder">
-              <div class="card-inner">
-                <figure class="card-front">
-                  <img width="96px" height="96px" src="./assets/avatar-aden.jpg" alt="Aden" />
-                  <figcaption>
+            <div class="card">
+              <div class="card-holder">
+                <div class="card-inner">
+                  <figure class="card-front">
+                    <img width="96px" height="96px" src="./assets/avatar-aden.jpg" alt="Aden" />
+                    <figcaption>
+                      <h3 class="heading-3">Aden Allan</h3>
+                      <p class="job-position">Head of Talent</p>
+                    </figcaption>
+                  </figure>
+                  <div class="back-card">
                     <h3 class="heading-3">Aden Allan</h3>
-                    <p class="job-position">Head of Talent</p>
-                  </figcaption>
-                </figure>
-                <div class="back-card">
-                  <h3 class="heading-3">Aden Allan</h3>
-                  <q class="card-quote">Empowered teams create truly amazing products. Set the north star and let them follow it.</q>
-                  <div class="socials">
-                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
-                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    <q class="card-quote">Empowered teams create truly amazing products. Set the north star and let them follow it.</q>
+                    <div class="socials">
+                      <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                      ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                    </div>
                   </div>
                 </div>
               </div>
+              <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
             </div>
-            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
         </div>
+        <img class="bg-pattern-3" src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
       </div>
-      <img class="bg-pattern-3" src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
-    </main>
-    <section class="clients-container">
-      <img class="pattern-four" src="./assets/bg-pattern-about-4.svg" alt="" />
-      <div class="clients-content">
-        <h2 class="heading-2">Some of our clients</h2>
-        <div class="clients">
-          <img src="./assets/logo-the-verge.png" alt="The Verge" />
-          <img src="./assets/logo-jakarta-post.png" class="jakarta-post" alt="The Jakarta Post" />
-          <img src="./assets/logo-the-guardian.png" alt="The Guardian" />
-          <img src="./assets/logo-tech-radar.png" alt="Tech Radar" />
-          <img src="./assets/logo-gadgets-now.png" class="gadgets-now" alt="Gadgets Now" />
+      <section class="clients-container">
+        <img class="pattern-four" src="./assets/bg-pattern-about-4.svg" alt="" />
+        <div class="clients-content">
+          <h2 class="heading-2">Some of our clients</h2>
+          <div class="clients">
+            <img src="./assets/logo-the-verge.png" alt="The Verge" />
+            <img src="./assets/logo-jakarta-post.png" class="jakarta-post" alt="The Jakarta Post" />
+            <img src="./assets/logo-the-guardian.png" alt="The Guardian" />
+            <img src="./assets/logo-tech-radar.png" alt="Tech Radar" />
+            <img src="./assets/logo-gadgets-now.png" class="gadgets-now" alt="Gadgets Now" />
+          </div>
         </div>
-      </div>
-    </section>
-    <section class="contact-us-container">
-      <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
-      <div class="contact-us-content">
-        <h2 class="heading-2">Ready to get started?</h2>
-        <a class="contact-us header-link" href="./contact.html">contact us</a>
-      </div>
-    </section>
+      </section>
+      <section class="contact-us-container">
+        <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
+        <div class="contact-us-content">
+          <h2 class="heading-2">Ready to get started?</h2>
+          <a class="contact-us header-link" href="./contact.html">contact us</a>
+        </div>
+      </section>
+    </main>
     <footer class="footer-container">
       <div class="footer-content">
         <div class="nav-group">
