fixed contact form verify

--- a/contact.html
+++ b/contact.html
@@ -77,17 +77,18 @@
             </div>
             <div class="input-group">
               <label for="company" class="visually-hidden">Company Name</label><br />
-              <input type="text" id="company" name="company" placeholder="Company Name" class="input" required />
+              <input type="text" id="company" name="company" placeholder="Company Name" class="input" />
               <p class="input-error-txt"></p>
             </div>
             <div class="input-group">
               <label for="title" class="visually-hidden">Title</label><br />
-              <input type="text" id="title" name="title" placeholder="Title" class="input" required />
+              <input type="text" id="title" name="title" placeholder="Title" class="input" />
               <p class="input-error-txt"></p>
             </div>
             <div class="input-group">
               <label class="visually-hidden" for="message">Message</label>
-              <textarea id="message" name="message" rows="4" cols="50" class="input message" placeholder="Message"></textarea>
+              <textarea id="message" name="message" rows="4" cols="50" class="input message" placeholder="Message" required></textarea>
+              <p class="input-error-txt"></p>
             </div>
             <input type="submit" class="submit-btn" value="submit" />
           </form>
