fixed copyright year

--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
             </ul>
           </div>
           <address class="address">987 Hillcrest Lane<br />Irvine, CA<br />California 92714<br />Call Us : 949-833-7432</address>
-          <p class="copyright">Copyright 2023. All Rights Reserved</p>
+          <p class="copyright">Copyright <span class="year"></span>. All Rights Reserved</p>
         </div>
       </div>
     </footer>
